applying hateoas logic to the meal controller